--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "lottie-web": "^5.7.8",
     "materialize-css": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^4.0.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
